<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_top"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="@string/banner_ad_unit_id1"
        ads:adSize="BANNER"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/adView_top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                app:ccp_autoFormatNumber="true"
                app:ccp_autoDetectCountry="true"
                app:ccp_rememberLastSelection="true" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ems="11"
                android:hint="@string/hint_mobile_number"
                android:inputType="phone"
                android:textColor="@color/colorBlack" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:hint="Enter Message Here">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="250dp"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/send"
                style="@style/MyButton"
                android:layout_marginRight="5dp"
                android:layout_weight="1"/>
            <!--<android.support.v7.widget.AppCompatButton-->
                <!--android:id="@+id/btn_send_later"-->
                <!--android:text="send Later"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"/>-->
        </android.support.v7.widget.ButtonBarLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:visibility="gone"
        android:id="@+id/adView_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
